--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,10 @@ dependencies {
 
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
 	
+	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+	compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+	
+	
     testImplementation 'junit:junit:4.13'
 }
